--- a/index.html
+++ b/index.html
@@ -12,5 +12,42 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-1 borderCoba">Kol 1</div>
+        <div class="col-lg-1 borderCoba">Kol 2</div>
+        <div class="col-lg-1 borderCoba">Kol 3</div>
+        <div class="col-lg-1 borderCoba">Kol 4</div>
+        <div class="col-lg-1 borderCoba">Kol 5</div>
+        <div class="col-lg-1 borderCoba">Kol 6</div>
+        <div class="col-lg-1 borderCoba">Kol 7</div>
+        <div class="col-lg-1 borderCoba">Kol 8</div>
+        <div class="col-lg-1 borderCoba">Kol 9</div>
+        <div class="col-lg-1 borderCoba">Kol 10</div>
+        <div class="col-lg-1 borderCoba">Kol 11</div>
+        <div class="col-lg-1 borderCoba">Kol 12</div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 borderCoba">Kol 1</div>
+        <div class="col-lg-4 borderCoba">Kol 2</div>
+        <div class="col-lg-4 borderCoba">Kol 3</div>
+      </div>
+      <!-- Row Bootstrap Max 12 -->
+      <div class="row">
+        <div class="col-lg-5 borderCoba">Kol 1</div>
+        <div class="col-lg-4 borderCoba">Kol 2</div>
+        <div class="col-lg-4 borderCoba">Kol 3</div>
+      </div>
+      <br />
+
+      <!-- Responsive Row -->
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-4 col-xs-4 borderCoba">Kol 1</div>
+        <div class="col-lg-4 col-md-3 col-sm-6 col-xs-4 borderCoba">Kol 2</div>
+        <div class="col-lg-4 col-md-3 col-sm-2 col-xs-4 borderCoba">Kol 3</div>
+      </div>
+    </div>
+  </body>
 </html>
